update .gitignore file

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -30,7 +30,7 @@ const {
       title: "Conception du système de gestion d'un réseaux de transport",
       description:
         "Analyse Fonctionnelle et Conception du nouveau Système de la Société TRICE. Projet académique de Modélisation Objet UML.",
-      technologies: ["LaTeX", "UML", "Git/GitHub", "Figma"],
+      technologies: ["LaTeX", "UML", "Git", "GitHub", "Figma"],
       link: "https://github.com",
     },
   ],
