fix hiver effect on about text et remove projet's technos icons

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -19,7 +19,7 @@ const {
       items: ["Vue.js" ,"Astro.js", "Git/GitHub", "MySQL", "PostgreSQL", "Numpy","Matplotlib", "Excel", "TailwindCss" ],
     },
     {
-      name: "Environnements et Systèmes d'exploitation",
+      name: "Environnements et OS",
       items: ["Visual Studio Code", "PyCharm", "MacOS", "Windows", "Linux"],
     },
     /*{
